--- a/BlazorInvoiceApp/Pages/Components/InvoicesComponent.razor
+++ b/BlazorInvoiceApp/Pages/Components/InvoicesComponent.razor
@@ -87,6 +87,9 @@
     {
         AuthenticationState auth = await authstate.GetAuthenticationStateAsync();
 
+        await repo.Customer.Seed(auth.User);
+        await repo.InvoiceTerms.Seed(auth.User);
+
         customers = await repo.Customer.GetAllMine(auth.User);
         foreach (CustomerDTO c in customers)
             customernames.Add(c.Name!);
